# gypsum

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: bst.h  stack.h  treeset.h
spec/: cppspec.hpp
src/: CMakeLists.txt  bst.c  gypsum.c  main.c  stack.c  treeset.c
